<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cameraActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/captureIv"
        android:layout_width="@dimen/capture_size"
        android:layout_height="@dimen/capture_size"
        android:layout_marginBottom="@dimen/margin_m"
        android:contentDescription="@string/content_desc_capture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/camera_alt_24" />

    <ImageView
        android:id="@+id/switchCamera"
        android:layout_width="@dimen/switch_camera_size"
        android:layout_height="@dimen/switch_camera_size"
        android:layout_marginTop="@dimen/margin_m"
        android:layout_marginEnd="@dimen/margin_m"
        android:contentDescription="@string/content_desc_switch_camera"
        app:layout_constraintEnd_toEndOf="@+id/viewFinder"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/camera_switch_24" />

</androidx.constraintlayout.widget.ConstraintLayout>