<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/postStoryActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.post.PostStoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/arrow_back_24"
            app:title="@string/label_post" />

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/content_post_story"
        layout="@layout/content_post_story" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>